--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@apollo/client": "^3.8.4",
     "apollo-server": "^3.12.1",
     "graphql": "^16.8.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sqlite3": "^5.1.6"
   },
   "type": "module"
 }
