--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^3.12.1",
     "graphql": "^16.8.1",
     "nodemon": "^3.0.1",
+    "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6"
   },
   "type": "module"
