--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,6 +13,8 @@ RUN npm run build
 
 # Use Nginx as the production server
 FROM nginx:alpine
+# Copying local nginx config file
+COPY nginx.config /etc/nginx/conf.d/default.conf
 # Copy the built React app to Nginx's web server directory
 COPY --from=build /app/build /usr/share/nginx/html
 # Start Nginx when the container runs
